fix: help block overlapping

--- a/css/style.sass
+++ b/css/style.sass
@@ -285,6 +285,7 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
   padding-left: 80px
 
 .form-section
+  height: 345px
   .form-group
     padding-left: 80px
 
@@ -318,7 +319,7 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
 .contact-section
   background-color: #0e1624
   padding-top: 61px
-  padding-bottom: 103px
+  height: 345px
 
 .address-section
   margin-left: 100px
@@ -844,7 +845,9 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
     top: 15px!important
   .client-list
     padding-bottom: 300px
-
+  .form-section
+    .help-block
+      margin-top: 5px!important
 
   @media screen and (max-width: 374px) and (min-width: 320px)
     .client-logo-container
